# chatbot_on

./: .gitignore  README.md  baseline_eval.py  check_project_health.py  merge_lora_to_full_model.py
RAG/: .gitignore  README.md  pyproject.toml  requirements-lock.txt  setup_rag.sh
RAG/src/one_ai_rag/: __init__.py  chunker.py  cli.py  config.py  embedder.py  retriever.py  scraper.py  store.py
RAG/tests/: conftest.py  test_pipeline_e2e.py  test_retriever.py  test_store.py
config/: README.md  pyproject.toml  setup_config.sh
config/src/one_ai_config/: __init__.py  validator.py
config/src/one_ai_config/codegen/: __init__.py  actions.py  generator.py
config/src/one_ai_config/codegen/templates/: actions.j2  script.py.j2
config/src/one_ai_config/schema/: __init__.py  base.py  oneke.py
config/tests/: conftest.py  test_config_e2e.py
core/: README.md  chain_patches.py  debug_chain_validator.py  patches_and_fixes.py  pyproject.toml
core/src/one_ai_core/: __init__.py  chain.py  cli.py  compare.py  config.py  llm.py
core/src/one_ai_core/prompts/: __init__.py
core/tests/: conftest.py  test_chain_compare.py  test_chain_integration.py  test_core_smoke.py  test_score_smoke.py
finetune/: eval_finetuned_results.json  preflight_check.py  pyproject.toml  setup_finetune.sh
finetune/data/processed/: dataset_stats.json  eval.jsonl  eval_raw.jsonl  eval_raw_v2.jsonl  train.jsonl  train_raw.jsonl  train_raw_v2.jsonl
finetune/data/seed/: gold_examples.json
finetune/data/synthetic/: generation_stats.json  synthetic_examples.json
finetune/data/synthetic_merged/: cleaned.json  cleaned_v2.json
finetune/data/synthetic_round2/: generation_stats.json  synthetic_examples.json
finetune/data/synthetic_round3/: generation_stats.json  synthetic_examples.json
finetune/data/synthetic_round4/: generation_stats.json  synthetic_examples.json
finetune/src/one_ai_finetune/data/: format_dataset.py  generate_synthetic.py
finetune/src/one_ai_finetune/data_quality/: dedup.py
finetune/src/one_ai_finetune/eval/: llm_judge.py  schema_eval.py
finetune/src/one_ai_finetune/training/: qlora_train.py
finetune/tests/: test_finetune_e2e.py
finetune/wandb/: latest-run
finetune/wandb/offline-run-20260319_174341-dcljsiij/: run-dcljsiij.wandb
finetune/wandb/offline-run-20260319_174341-dcljsiij/files/: requirements.txt
finetune/wandb/offline-run-20260320_151351-3b7nipbt/: run-3b7nipbt.wandb
finetune/wandb/offline-run-20260320_151351-3b7nipbt/files/: requirements.txt
